Refine all site content to clearly demonstrate influencer marketing use cases and actionable B2B applications.

--- a/contact.html
+++ b/contact.html
@@ -130,29 +130,32 @@
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🔍</div>
                                         <div class="grid-item-text">
-                                            <h5>Semantic Search</h5>
-                                            <p>Find experts by intent, not just keywords.</p>
+                                            <h5>Expert Discovery</h5>
+                                            <p>Find authority figures by intent, not just follower counts.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">📈</div>
                                         <div class="grid-item-text">
-                                            <h5>Impact Prediction</h5>
-                                            <p>Forecast reach and conversion metrics.</p>
+                                            <h5>Velocity Forecasting</h5>
+                                            <p>Predict how fast your message will travel through specific interest
+                                                clusters.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🛡️</div>
                                         <div class="grid-item-text">
-                                            <h5>Pricing Guard</h5>
-                                            <p>Eliminate overpayment with data-backed value.</p>
+                                            <h5>Intelligence Guard</h5>
+                                            <p>Eliminate overpayment with objective market-value audits for every
+                                                activation.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🕸️</div>
                                         <div class="grid-item-text">
-                                            <h5>Network Mapping</h5>
-                                            <p>Visualize clusters of true influence.</p>
+                                            <h5>Influence Mapping</h5>
+                                            <p>Visualize the "Bridge Influencers" connecting your fragmented niche
+                                                networks.</p>
                                         </div>
                                     </div>
                                 </div>
