--- a/index.html
+++ b/index.html
@@ -60,29 +60,32 @@
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🔍</div>
                                         <div class="grid-item-text">
-                                            <h5>Semantic Search</h5>
-                                            <p>Find experts by intent, not just keywords.</p>
+                                            <h5>Expert Discovery</h5>
+                                            <p>Find authority figures by intent, not just follower counts.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">📈</div>
                                         <div class="grid-item-text">
-                                            <h5>Impact Prediction</h5>
-                                            <p>Forecast reach and conversion metrics.</p>
+                                            <h5>Velocity Forecasting</h5>
+                                            <p>Predict how fast your message will travel through specific interest
+                                                clusters.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🛡️</div>
                                         <div class="grid-item-text">
-                                            <h5>Pricing Guard</h5>
-                                            <p>Eliminate overpayment with data-backed value.</p>
+                                            <h5>Intelligence Guard</h5>
+                                            <p>Eliminate overpayment with objective market-value audits for every
+                                                activation.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🕸️</div>
                                         <div class="grid-item-text">
-                                            <h5>Network Mapping</h5>
-                                            <p>Visualize clusters of true influence.</p>
+                                            <h5>Influence Mapping</h5>
+                                            <p>Visualize the "Bridge Influencers" connecting your fragmented niche
+                                                networks.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -150,8 +153,8 @@
                     <div class="badge">Turn influence into a measurable, predictable decision.</div>
                     <h1>Find the <span class="text-highlight">experts</span> and <span class="text-highlight">opinion
                             leaders</span> your audience already trust.</h1>
-                    <p class="lead">NYRA is a living map of true influence – ranked by authority, semantic relevance,
-                        and your feedback.</p>
+                    <p class="lead">Stop guessing who moves the needle. NYRA provides the intelligence layer to identify
+                        true authority, forecast impact, and orchestrate precision influencer activations at scale.</p>
                     <div class="hero-ctas">
                         <a href="#signup" class="btn btn-large btn-primary">Join the Waiting List for Early Access
                             &rarr;</a>
@@ -207,9 +210,9 @@
                     <!-- Card 1 -->
                     <div class="feature-row-card glass">
                         <div class="card-text">
-                            <h3>Authority Mapping</h3>
-                            <p>The Authority Graph™ turns influence into structured intelligence by mapping credibility,
-                                relevance, and network impact - per campaign.</p>
+                            <h3>Authority Graph™</h3>
+                            <p>Identify the true nodes of influence. Our graph doesn't just count followers; it maps the
+                                intellectual authority and real-world impact of every creator in your niche.</p>
                             <ul class="feature-checklist">
                                 <li><span class="icon-check">✓</span> Campaign-specific</li>
                                 <li><span class="icon-check">✓</span> Network-aware</li>
@@ -226,9 +229,9 @@
                     <!-- Card 2 -->
                     <div class="feature-row-card glass">
                         <div class="card-text">
-                            <h3>Network & Impact Prediction</h3>
-                            <p>Don't guess. We predict who will see the content and exactly what the downstream impact
-                                will be on your target personas.</p>
+                            <h3>Impact Prediction</h3>
+                            <p>Stop hoping for virality. Forecast the exact reach, engagement velocity, and conversion
+                                potential of every activation before you send a single brief.</p>
                         </div>
                         <div class="card-visual">
                             <img src="/assets/feat-impact.png" alt="Network Impact Visualization" class="feature-img"
@@ -283,42 +286,50 @@
                     <!-- 1. Tech & AI -->
                     <div class="industry-card" data-angle="0" data-distance="1.2">
                         <img src="/assets/ind-tech.png" alt="Tech & AI" loading="lazy">
-                        <span>Tech & AI Startups</span>
+                        <span>Tech & AI</span>
+                        <p>Map technical authority & build developer trust.</p>
                     </div>
                     <!-- 2. Fintech -->
                     <div class="industry-card" data-angle="45" data-distance="1.5">
                         <img src="/assets/ind-fintech.png" alt="Fintech & Crypto" loading="lazy">
                         <span>Fintech & Crypto</span>
+                        <p>Activate regulatory voices & compliance SMEs.</p>
                     </div>
                     <!-- 3. Health -->
                     <div class="industry-card" data-angle="90" data-distance="1.3">
                         <img src="/assets/ind-health.png" alt="HealthTech" loading="lazy">
-                        <span>HealthTech & Pharma</span>
+                        <span>Health & Pharma</span>
+                        <p>Engage medical experts & verified research nodes.</p>
                     </div>
                     <!-- 4. Energy -->
                     <div class="industry-card" data-angle="135" data-distance="1.6">
                         <img src="/assets/ind-energy.png" alt="Energy" loading="lazy">
-                        <span>Energy</span>
+                        <span>Energy & Infra</span>
+                        <p>Drive policy insights & infrastructure awareness.</p>
                     </div>
                     <!-- 5. ESG -->
                     <div class="industry-card" data-angle="180" data-distance="1.2">
                         <img src="/assets/ind-esg.png" alt="ESG" loading="lazy">
-                        <span>ESG & Sustainability</span>
+                        <span>Sustainability</span>
+                        <p>Verify impact claims via objective advocates.</p>
                     </div>
                     <!-- 6. Supply Chain -->
                     <div class="industry-card" data-angle="225" data-distance="1.5">
                         <img src="/assets/ind-supply.png" alt="Supply Chain" loading="lazy">
-                        <span>Production & Supply Chain</span>
+                        <span>Supply Chain</span>
+                        <p>Bridge logistics gaps with sector-specific vets.</p>
                     </div>
                     <!-- 7. Gov -->
                     <div class="industry-card" data-angle="270" data-distance="1.3">
                         <img src="/assets/ind-gov.png" alt="Government" loading="lazy">
                         <span>Gov & Regulatory</span>
+                        <p>Communicate policy shifts with trusted nodes.</p>
                     </div>
                     <!-- 8. NGO -->
                     <div class="industry-card" data-angle="315" data-distance="1.6">
                         <img src="/assets/ind-ngo.png" alt="NGO" loading="lazy">
-                        <span>NGOs</span>
+                        <span>Major NGOs</span>
+                        <p>Mobilize donor networks via value-aligned voices.</p>
                     </div>
                 </div>
             </div>
@@ -329,10 +340,11 @@
         <section class="use-cases-interactive reveal-on-scroll" id="use-cases">
             <div class="container">
                 <div class="section-header text-center">
-                    <span class="badge">How It Works</span>
-                    <h2>Prompt. Match. Predict. Activate.</h2>
-                    <p class="lead">Describe your campaign in plain language. NYRA finds the right voices, forecasts
-                        impact, and delivers pricing intelligence—before you commit a dollar.</p>
+                    <span class="badge">The Intelligence Layer</span>
+                    <h2>From Guestimates to Science</h2>
+                    <p class="lead">Most influencer tools are just glorified databases. NYRA is an intelligence layer
+                        that identifies true authority, forecasts campaign velocity, and turns influence into a
+                        predictable B2B channel.</p>
                 </div>
 
                 <div class="console-wrapper glass-dark">
@@ -347,15 +359,15 @@
                             <div class="category-subs">
                                 <div class="menu-item active" data-id="awareness">
                                     <span class="icon">📢</span>
-                                    <h3>Awareness & Reach</h3>
+                                    <h3>Awareness & Velocity</h3>
                                 </div>
                                 <div class="menu-item" data-id="event">
                                     <span class="icon">🎯</span>
-                                    <h3>Event Amplification</h3>
+                                    <h3>Event Domination</h3>
                                 </div>
                                 <div class="menu-item" data-id="education">
                                     <span class="icon">📚</span>
-                                    <h3>Market Education</h3>
+                                    <h3>Category Education</h3>
                                 </div>
                             </div>
                         </div>
@@ -369,15 +381,15 @@
                             <div class="category-subs">
                                 <div class="menu-item" data-id="thought">
                                     <span class="icon">💡</span>
-                                    <h3>Thought Leadership</h3>
+                                    <h3>Thought Partnership</h3>
                                 </div>
                                 <div class="menu-item" data-id="whitepaper">
                                     <span class="icon">📄</span>
-                                    <h3>Whitepaper Collab</h3>
+                                    <h3>Research Co-Creation</h3>
                                 </div>
                                 <div class="menu-item" data-id="technical">
                                     <span class="icon">🔧</span>
-                                    <h3>Technical Trust</h3>
+                                    <h3>Technical Validation</h3>
                                 </div>
                             </div>
                         </div>
@@ -391,15 +403,15 @@
                             <div class="category-subs">
                                 <div class="menu-item" data-id="review">
                                     <span class="icon">⭐</span>
-                                    <h3>Product Review</h3>
+                                    <h3>Objective Reviews</h3>
                                 </div>
                                 <div class="menu-item" data-id="reputation">
                                     <span class="icon">🛡️</span>
-                                    <h3>Reputation Building</h3>
+                                    <h3>Reputation Defense</h3>
                                 </div>
                                 <div class="menu-item" data-id="affinity">
                                     <span class="icon">❤️</span>
-                                    <h3>Brand Affinity</h3>
+                                    <h3>Alignment Strategy</h3>
                                 </div>
                             </div>
                         </div>
@@ -413,11 +425,11 @@
                             <div class="category-subs">
                                 <div class="menu-item" data-id="affiliate">
                                     <span class="icon">💎</span>
-                                    <h3>Affiliate Engine</h3>
+                                    <h3>High-Ticket Affiliates</h3>
                                 </div>
                                 <div class="menu-item" data-id="sales">
                                     <span class="icon">🤝</span>
-                                    <h3>Sales Partnership</h3>
+                                    <h3>Sales Intelligence</h3>
                                 </div>
                             </div>
                         </div>
