--- a/use-cases.html
+++ b/use-cases.html
@@ -53,29 +53,32 @@
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🔍</div>
                                         <div class="grid-item-text">
-                                            <h5>Semantic Search</h5>
-                                            <p>Find experts by intent, not just keywords.</p>
+                                            <h5>Expert Discovery</h5>
+                                            <p>Find authority figures by intent, not just follower counts.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">📈</div>
                                         <div class="grid-item-text">
-                                            <h5>Impact Prediction</h5>
-                                            <p>Forecast reach and conversion metrics.</p>
+                                            <h5>Velocity Forecasting</h5>
+                                            <p>Predict how fast your message will travel through specific interest
+                                                clusters.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🛡️</div>
                                         <div class="grid-item-text">
-                                            <h5>Pricing Guard</h5>
-                                            <p>Eliminate overpayment with data-backed value.</p>
+                                            <h5>Intelligence Guard</h5>
+                                            <p>Eliminate overpayment with objective market-value audits for every
+                                                activation.</p>
                                         </div>
                                     </div>
                                     <div class="grid-item">
                                         <div class="grid-item-icon">🕸️</div>
                                         <div class="grid-item-text">
-                                            <h5>Network Mapping</h5>
-                                            <p>Visualize clusters of true influence.</p>
+                                            <h5>Influence Mapping</h5>
+                                            <p>Visualize the "Bridge Influencers" connecting your fragmented niche
+                                                networks.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -147,31 +150,36 @@
                         01</span>
                     <h2 style="font-size: 32px; color: #fff; margin-bottom: 20px;">The Reach Engine</h2>
                     <p style="color: var(--text-muted); margin-bottom: 40px; font-size: 18px;">
-                        Build massive awareness by identifying the nodes of influence that control the conversation in
-                        your industry.
+                        Infiltrate niche professional clusters and dominate the industry conversation by activating the
+                        right nodes of influence.
                     </p>
 
                     <div style="display: flex; flex-direction: column; gap: 24px;">
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">📢 Awareness & Reach
+                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">📢 Awareness &
+                                Velocity
                             </h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Launch global campaigns targeted at
-                                the precise groups that matter most to your brand.</p>
+                            <p style="font-size: 14px; color: var(--text-muted);">Identify "Bridge Influencers" who
+                                connect siloed professional networks, ensuring your message travels further with less
+                                waste and maximum velocity.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">🎯 Event
-                                Amplification</h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Ensure your events are the talk of the
-                                industry by activating the right onsite and digital voices.</p>
+                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">🎯 Event Domination
+                            </h4>
+                            <p style="font-size: 14px; color: var(--text-muted);">Identify speaker/attendee authority
+                                scores before the show. Activate them as digital co-hosts to dominate the social share
+                                of voice during key events.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">📚 Market Education
+                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">📚 Category
+                                Education
                             </h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Translate complex technical concepts
-                                into widely understood industry standards via trusted experts.</p>
+                            <p style="font-size: 14px; color: var(--text-muted);">Target the "Teacher" personas—creators
+                                whose explainers and tutorials are saved and shared by B2B decision-makers when learning
+                                new categories.</p>
                         </div>
                     </div>
                 </div>
@@ -182,31 +190,35 @@
                         02</span>
                     <h2 style="font-size: 32px; color: #fff; margin-bottom: 20px;">The Authority Lab</h2>
                     <p style="color: var(--text-muted); margin-bottom: 40px; font-size: 18px;">
-                        Establish market leadership by co-creating content with verified authority figures and subject
-                        matter experts.
+                        Establish market leadership by co-creating content with subject matter experts who hold true
+                        intellectual authority.
                     </p>
 
                     <div style="display: flex; flex-direction: column; gap: 24px;">
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
                             <h4 style="color: var(--secondary); margin-bottom: 8px; font-size: 18px;">💡 Thought
-                                Leadership</h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Position your executives alongside the
-                                world's most respected industry thinkers.</p>
+                                Partnership</h4>
+                            <p style="font-size: 14px; color: var(--text-muted);">Co-develop podcasts or newsletter
+                                series with experts who have high "Topic Resonance" scores, ensuring deep alignment with
+                                your product's value prop.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--secondary); margin-bottom: 8px; font-size: 18px;">📄 Whitepaper
-                                Collab</h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Co-author authoritative research that
-                                moves the market and generates high-intent leads.</p>
+                            <h4 style="color: var(--secondary); margin-bottom: 8px; font-size: 18px;">📄 Research
+                                Co-Creation</h4>
+                            <p style="font-size: 14px; color: var(--text-muted);">Invite recognized industry analysts to
+                                contribute to your whitepapers, increasing the download-to-demo conversion rate through
+                                borrowed authority.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--secondary); margin-bottom: 8px; font-size: 18px;">🔧 Technical Trust
+                            <h4 style="color: var(--secondary); margin-bottom: 8px; font-size: 18px;">🔧 Technical
+                                Validation
                             </h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Build deep credibility among developer
-                                and engineering communities via technical authority mapping.</p>
+                            <p style="font-size: 14px; color: var(--text-muted);">Win over the skeptics. Identify the
+                                developers and architects who act as technical gatekeepers and engage them via
+                                collaborative GitHub projects.</p>
                         </div>
                     </div>
                 </div>
@@ -217,29 +229,34 @@
                         03</span>
                     <h2 style="font-size: 32px; color: #fff; margin-bottom: 20px;">The Social Proof</h2>
                     <p style="color: var(--text-muted); margin-bottom: 40px; font-size: 18px;">
-                        Convert skepticism into confidence with high-impact reviews and authentic brand endorsements.
+                        Convert skepticism into confidence with high-impact validation and authentic endorsements from
+                        the market's most critical voices.
                     </p>
 
                     <div style="display: flex; flex-direction: column; gap: 24px;">
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--accent); margin-bottom: 8px; font-size: 18px;">⭐ Product Review</h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Get your product in the hands of the
-                                most critical and respected reviewers in your niche.</p>
+                            <h4 style="color: var(--accent); margin-bottom: 8px; font-size: 18px;">⭐ Objective Reviews
+                            </h4>
+                            <p style="font-size: 14px; color: var(--text-muted);">Orchestrate "Honest Benchmarks" by
+                                getting your tool in the hands of critical reviewers. Objective validation is 10x more
+                                powerful than any paid testimonial.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
                             <h4 style="color: var(--accent); margin-bottom: 8px; font-size: 18px;">🛡️ Reputation
-                                Building</h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Systematically build a wall of
-                                positive, authoritative sentiment around your organization.</p>
+                                Defense</h4>
+                            <p style="font-size: 14px; color: var(--text-muted);">Build a network of "Protector"
+                                influencers who naturally advocate for your brand during critical industry shifts and
+                                competitive attacks.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--accent); margin-bottom: 8px; font-size: 18px;">❤️ Brand Affinity
+                            <h4 style="color: var(--accent); margin-bottom: 8px; font-size: 18px;">❤️ Alignment Strategy
                             </h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Create long-term emotional resonance
-                                with your audience through value-aligned partnerships.</p>
+                            <p style="font-size: 14px; color: var(--text-muted);">Create long-term resonance by matching
+                                your brand with voices that share your core values using NYRA's cultural alignment
+                                filters.</p>
                         </div>
                     </div>
                 </div>
@@ -250,23 +267,27 @@
                         04</span>
                     <h2 style="font-size: 32px; color: #fff; margin-bottom: 20px;">The Conversion Hub</h2>
                     <p style="color: var(--text-muted); margin-bottom: 40px; font-size: 18px;">
-                        Turn authority into revenue with measurable affiliate programs and strategic sales partnerships.
+                        Turn authority into revenue with measurable influence-led programs that directly impact the
+                        bottom line.
                     </p>
 
                     <div style="display: flex; flex-direction: column; gap: 24px;">
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">💎 Affiliate Engine
+                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">💎 High-Ticket
+                                Affiliates
                             </h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Deploy performance-based programs with
-                                the partners who actually drive high-ticket B2B sales.</p>
+                            <p style="font-size: 14px; color: var(--text-muted);">Partner with "Consul" influencers who
+                                act as trusted advisors to procurement teams, rewarding them for high-intent
+                                introductions that actually close.</p>
                         </div>
                         <div class="glass"
                             style="padding: 24px; border-radius: 20px; background: rgba(255,255,255,0.02);">
-                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">🤝 Sales Partnership
-                            </h4>
-                            <p style="font-size: 14px; color: var(--text-muted);">Bridge the gap between marketing and
-                                sales with influence-supported territory development.</p>
+                            <h4 style="color: var(--primary); margin-bottom: 8px; font-size: 18px;">🤝 Sales
+                                Intelligence</h4>
+                            <p style="font-size: 14px; color: var(--text-muted);">Equip your sales team with "Influence
+                                Briefs"—know exactly which external voices a target prospect follows before you send
+                                that first outreach.</p>
                         </div>
                     </div>
                 </div>
